docs: Documentando rota de Query no Swagger
