# app/Http/Requests/QueryRequest.php
@@ -4,6 +4,22 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
+/**
+ * @OA\Schema(
+ *      schema="QueryRequest",
+ *      required={"integrationMode", "queryId"},
+ *      @OA\Property(property="integrationMode", type="string", example="10000"),
+ *      @OA\Property(property="queryId", type="integer", example=10000),
+ *      @OA\Property(
+ *          property="items", 
+ *          type="array",
+ *          @OA\Items(
+ *              @OA\Property(property="paramName", type="string", example="Data_Inicio"),
+ *              @OA\Property(property="value", type="string", example="2024/01/01")
+ *          )
+ *      )
+ * )
+ */
 class QueryRequest extends FormRequest
 {
     /**
